version/0.27/_sources/api/solver/_autosummary/settings/line_surface.rst.txt
:orphan:

.. _line_surface:

line_surface
============

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.line_surface
    :show-inheritance:

.. rubric:: Methods

========================================   =========================================

Method                                                                       Summary

========================================   =========================================
:ref:`create <create_1>`                                 Create an instance of this.

:ref:`delete <delete_1>`                                    Delete selected objects.

:ref:`rename <rename>`                                            Rename the object.

:ref:`list <list>`                                    List the names of the objects.

:ref:`list_properties <list_properties>`       List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                        Create a copy of the object.

========================================   =========================================

.. rubric:: Named object type

:ref:`line_surface_child <line_surface_child>`


.. rubric:: Included in:

==============================   ===============================================================================================

Parent                                                                                                                   Summary

==============================   ===============================================================================================
:ref:`surfaces_5 <surfaces_5>`       Provides access to creating multiple zone surfaces and to grouping and ungrouping surfaces.

==============================   ===============================================================================================

